# android-mk-to-cmake

./: .gitignore  AGENT_CONTEXT.md  OPERATING_GUIDE.md  README.md  SKILL.md  langgraph.json  pyproject.toml
.opencode/agent/: mk2cmake-unknown.md
lite_dag/: README.md  run.py
rules/: android_vars.json  flag_classify.json  known_make_functions.json
scripts/: ai_unknown.py  ask_model_for_unknown.py  check_cmake.py  common.py  convert_ir.py  graph_workflow.py  parse_include_graph.py  parse_kconfig.py  parse_mk.py  render_cmake.py  run_all.py  scan_mk.py
templates/: CMakeLists.txt.j2  migration_report.md.j2  package.cmake.j2
tests/: test_lite_dag.py  test_pipeline.py
