[project]
name = "android-mk-to-cmake"
version = "0.2.0"
description = "Script-first Android.mk/package.mk/Makefile to CMake migration workflow with LangGraph orchestration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langgraph-cli[inmem]>=0.3",
    "pydantic>=2",
]

[tool.setuptools]
packages = []
